<resources>
    <string name="app_name">androidGettingStarted</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btnPay">PAY</string>
    <string name="btnConnect">Connect</string>
    <string name="btnDisconnect">Disconnect</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="home">HOME</string>
    <string name="menuItem2">Item2</string>
    <string name="menuItem3">Item3</string>
</resources>
